backend.log

> backend@1.0.0 dev
> nodemon --exec ts-node src/server.ts

[33m[nodemon] 3.1.14[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/server.ts`[39m
[dotenv@17.3.1] injecting env (6) from .env -- tip: ⚙️  load multiple .env files with { path: ['.env.local', '.env'] }
D:\march-major\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/controllers/resumeController.ts(2,30): error TS2307: Cannot find module 'uuid' or its corresponding type declarations.

    at createTSError (D:\march-major\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\march-major\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (D:\march-major\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\march-major\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\march-major\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (D:\march-major\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2307 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
